SERVER-7663 Fixed help documentation for mongostat